--- a/crm_app/templates/crm/base/header.html
+++ b/crm_app/templates/crm/base/header.html
@@ -438,6 +438,11 @@
                   </div>
                </div>
             </div> {% endcomment %}
+            {% comment %} <span class="text-danger">100</span></h6> {% endcomment %}
+            <h4 class="fs-22 fw-semibold ff-secondary mt-2">
+               ₹<span class="" data-target="{{ wallet_balance }}">{{ wallet_balance|floatformat:2 }}</span>
+           </h4>
+           
             <div class="ms-1 header-item d-none d-sm-flex">
                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                   data-toggle="fullscreen">
@@ -450,6 +455,7 @@
                <i class='bx bx-moon fs-22'></i>
                </button>
             </div>
+            
             {% comment %} <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdown">
                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                   id="page-header-notifications-dropdown" data-bs-toggle="dropdown"
@@ -780,18 +786,16 @@
                   <a class="dropdown-item" href="{% url "profile" %}"><i
                      class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                      class="align-middle">Profile</span></a>
-                  <a class="dropdown-item" href="#" id="rechargeBtn"><i
+                  {% comment %} <a class="dropdown-item" href="#" id="rechargeBtn"><i
                      class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
-                     class="align-middle">Recharge</span></a>
-                  {% comment %} <a class="dropdown-item" href="apps-chat.html"><i
-                     class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i>
-                  <span class="align-middle">Messages</span></a>
-                  <a class="dropdown-item" href="apps-tasks-kanban.html"><i
-                     class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i>
-                  <span class="align-middle">Taskboard</span></a>
-                  <a class="dropdown-item" href="{% url "help_emp" %}"><i
-                     class="mdi mdi-lifebuoy text-muted fs-16 align-middle me-1"></i> <span
-                     class="align-middle">Help</span></a> {% endcomment %}
+                     class="align-middle">Recharge</span></a> {% endcomment %}
+
+                     <a class="dropdown-item" href="#"  data-bs-toggle="modal" data-bs-target=".bs-example-modal-sm">
+                        <i class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i>
+                        <span class="align-middle">Recharge</span>
+                      </a>
+                      
+                 
                   <div class="dropdown-divider"></div>
                   {% comment %} <a class="dropdown-item" href="pages-profile.html"><i
                      class="mdi mdi-wallet text-muted fs-16 align-middle me-1"></i> <span
@@ -816,7 +820,7 @@
       </div>
    </div>
 </header>
-
+{% comment %} 
 <script>
    const cashfree = Cashfree({ mode: "sandbox" });
 
@@ -841,4 +845,4 @@
            }
        });
    });
-</script>
+</script> {% endcomment %}
