--- a/crm_app/templates/crm/base/navbar.html
+++ b/crm_app/templates/crm/base/navbar.html
@@ -375,9 +375,12 @@
             {% if request.user.is_authenticated %}
             {% with request.session.access_token as token %}
             <li class="nav-item">
-               <a class="nav-link menu-link"  href="https://b2bnw.netlify.app/itinerary?token={{ token }}">
+               <a class="nav-link menu-link"  href="https://b2bnww.netlify.app/itinerary?token={{ token }}">
                <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">B2B</span>
                </a>
+               {% comment %} <a class="nav-link menu-link"  href="https://b2bnw.netlify.app//?token={{ token }}">
+               <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">B2B</span>
+               </a> {% endcomment %}
             </li>
             {% endwith %}
             {% endif %}
