--- a/crm_app/templates/crm/base/navbar.html
+++ b/crm_app/templates/crm/base/navbar.html
@@ -371,6 +371,11 @@
                <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">Wallet History</span>
                </a>
             </li>
+            <li class="nav-item">
+               <a class="nav-link menu-link"  href="{% url "booking_history" %}">
+               <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">Booking History</span>
+               </a>
+            </li>
 
             {% if request.user.is_authenticated %}
             {% with request.session.access_token as token %}
